# Translate

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ReadMe.md  ThreadFile.cpp  ThreadFile.h  ThreadFileStruct.h  main.cpp
